        (like the windoaws GUI). These can be modified via the
        properties dialogue.

    o   Output from the GNOME console is block buffered for increased
        speed

    o	New function .libPaths() for getting or setting the paths to the
	library trees R knows about.  This is still stored in .lib.loc,
	which however should no longer be accessed directly.


DOCUMENTATION CHANGES

    o	`Writing R Extensions' has a new chapter on generic/method
	functions.


UTILITIES

    o	New package `tools' for package development and administration
	tools, containing the QA tools checkFF(), codoc() and undoc()
	previously in package base, as well as the following new ones:

	-  checkAssignFuns() for checking whether the final argument of
           assignment functions in a package is named `value'.

	-  checkDocArgs() for checking whether all arguments shown in
	   \usage of Rd files are documented in the corresponding
	   \arguments.

	-  checkMethods() for checking whether all methods defined in a
           package have all arguments of their generic.

	-  checkTnF() for finding expressions containing the symbols `T'
           and `F'.

    o	R CMD Rd2dvi has more convenient defaults for its output file.

    o	R CMD check now also fully checks the Depends field in the
	package DESCRIPTION file.  It also tests for syntax errors in
	the R code, whether all methods in the code have all arguments
	of the corresponding generic, for arguments shown in \usage but
	not documented in \arguments, and whether assignment functions
	have their final argument named `value'.


C-LEVEL FACILITIES

    o	arraySubscript and vectorSubscript are now available to package
	users.	All "array-like" packages can use a standard method for
	calculating subscripts.

    o	The C routine type2symbol, similar to type2str, returns a symbol
	corresponding to the type supplied as an argument.

    o	The macro SHLIB_EXT now includes `.', e.g. ".so" or ".dll",